cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09678_369461692.yaml
Resources:
  SpecificRoutingVPCBEC300DB:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: SpecificRoutingDemoStack/SpecificRoutingVPC
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/Resource
  SpecificRoutingVPCbastionSubnet1Subnet1B0FFF1D:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      VpcId:
        Ref: SpecificRoutingVPCBEC300DB
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: bastion
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: SpecificRoutingDemoStack/SpecificRoutingVPC/bastionSubnet1
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/bastionSubnet1/Subnet
  SpecificRoutingVPCbastionSubnet1RouteTableE040DD77:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: SpecificRoutingVPCBEC300DB
      Tags:
        - Key: Name
          Value: SpecificRoutingDemoStack/SpecificRoutingVPC/bastionSubnet1
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/bastionSubnet1/RouteTable
  SpecificRoutingVPCbastionSubnet1RouteTableAssociationE1B7DBAA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SpecificRoutingVPCbastionSubnet1RouteTableE040DD77
      SubnetId:
        Ref: SpecificRoutingVPCbastionSubnet1Subnet1B0FFF1D
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/bastionSubnet1/RouteTableAssociation
  SpecificRoutingVPCbastionSubnet1DefaultRouteB54755BB:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: SpecificRoutingVPCbastionSubnet1RouteTableE040DD77
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: SpecificRoutingVPCIGW9908CC8E
    DependsOn:
      - SpecificRoutingVPCVPCGW1DA9E051
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/bastionSubnet1/DefaultRoute
  SpecificRoutingVPCbastionSubnet1EIP58CAEEAD:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: SpecificRoutingDemoStack/SpecificRoutingVPC/bastionSubnet1
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/bastionSubnet1/EIP
  SpecificRoutingVPCbastionSubnet1NATGateway45DC1DA6:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - SpecificRoutingVPCbastionSubnet1EIP58CAEEAD
          - AllocationId
      SubnetId:
        Ref: SpecificRoutingVPCbastionSubnet1Subnet1B0FFF1D
      Tags:
        - Key: Name
          Value: SpecificRoutingDemoStack/SpecificRoutingVPC/bastionSubnet1
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/bastionSubnet1/NATGateway
  SpecificRoutingVPCapplicationSubnet1SubnetFB3733AC:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId:
        Ref: SpecificRoutingVPCBEC300DB
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: application
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: SpecificRoutingDemoStack/SpecificRoutingVPC/applicationSubnet1
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/applicationSubnet1/Subnet
  SpecificRoutingVPCapplicationSubnet1RouteTable30B68576:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: SpecificRoutingVPCBEC300DB
      Tags:
        - Key: Name
          Value: SpecificRoutingDemoStack/SpecificRoutingVPC/applicationSubnet1
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/applicationSubnet1/RouteTable
  SpecificRoutingVPCapplicationSubnet1RouteTableAssociationE7B07135:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SpecificRoutingVPCapplicationSubnet1RouteTable30B68576
      SubnetId:
        Ref: SpecificRoutingVPCapplicationSubnet1SubnetFB3733AC
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/applicationSubnet1/RouteTableAssociation
  SpecificRoutingVPCapplicationSubnet1DefaultRoute5151E063:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: SpecificRoutingVPCapplicationSubnet1RouteTable30B68576
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: SpecificRoutingVPCbastionSubnet1NATGateway45DC1DA6
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/applicationSubnet1/DefaultRoute
  SpecificRoutingVPCapplianceSubnet1Subnet911D1F31:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.2.0/24
      VpcId:
        Ref: SpecificRoutingVPCBEC300DB
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: appliance
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: SpecificRoutingDemoStack/SpecificRoutingVPC/applianceSubnet1
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/applianceSubnet1/Subnet
  SpecificRoutingVPCapplianceSubnet1RouteTableC7FE5E06:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: SpecificRoutingVPCBEC300DB
      Tags:
        - Key: Name
          Value: SpecificRoutingDemoStack/SpecificRoutingVPC/applianceSubnet1
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/applianceSubnet1/RouteTable
  SpecificRoutingVPCapplianceSubnet1RouteTableAssociationE368DAF2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SpecificRoutingVPCapplianceSubnet1RouteTableC7FE5E06
      SubnetId:
        Ref: SpecificRoutingVPCapplianceSubnet1Subnet911D1F31
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/applianceSubnet1/RouteTableAssociation
  SpecificRoutingVPCapplianceSubnet1DefaultRouteDE622A37:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: SpecificRoutingVPCapplianceSubnet1RouteTableC7FE5E06
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: SpecificRoutingVPCbastionSubnet1NATGateway45DC1DA6
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/applianceSubnet1/DefaultRoute
  SpecificRoutingVPCIGW9908CC8E:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: SpecificRoutingDemoStack/SpecificRoutingVPC
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/IGW
  SpecificRoutingVPCVPCGW1DA9E051:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: SpecificRoutingVPCBEC300DB
      InternetGatewayId:
        Ref: SpecificRoutingVPCIGW9908CC8E
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingVPC/VPCGW
  BastionHostInstanceSecurityGroupE75D4274:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SpecificRoutingDemoStack/BastionHost/Resource/InstanceSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Name
          Value: BastionHost
      VpcId:
        Ref: SpecificRoutingVPCBEC300DB
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/BastionHost/Resource/InstanceSecurityGroup/Resource
  BastionHostInstanceRoleDD3FA5F1:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
      Tags:
        - Key: Name
          Value: BastionHost
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/BastionHost/Resource/InstanceRole/Resource
  BastionHostInstanceRoleDefaultPolicy17347525:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ssmmessages:*
              - ssm:UpdateInstanceInformation
              - ec2messages:*
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: BastionHostInstanceRoleDefaultPolicy17347525
      Roles:
        - Ref: BastionHostInstanceRoleDD3FA5F1
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/BastionHost/Resource/InstanceRole/DefaultPolicy/Resource
  BastionHostInstanceProfile770FCA07:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: BastionHostInstanceRoleDD3FA5F1
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/BastionHost/Resource/InstanceProfile
  BastionHost30F9ED05:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      IamInstanceProfile:
        Ref: BastionHostInstanceProfile770FCA07
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t3.nano
      SecurityGroupIds:
        - Fn::GetAtt:
            - BastionHostInstanceSecurityGroupE75D4274
            - GroupId
      SubnetId:
        Ref: SpecificRoutingVPCbastionSubnet1Subnet1B0FFF1D
      Tags:
        - Key: Name
          Value: BastionHost
      UserData:
        Fn::Base64: "#!/bin/bash"
    DependsOn:
      - BastionHostInstanceRoleDefaultPolicy17347525
      - BastionHostInstanceRoleDD3FA5F1
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/BastionHost/Resource/Resource
  ApplicationSecurityGroup3903A0DC:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access to ec2 instances
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allows HTTP connection from bastion security group
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId:
        Ref: SpecificRoutingVPCBEC300DB
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/ApplicationSecurityGroup/Resource
  SpecificRoutingS3RoleC7C024BF:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingS3Role/Resource
  SpecificRoutingS3RoleDefaultPolicy55CDB476:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - s3:GetObject*
              - s3:GetBucket*
              - s3:List*
            Effect: Allow
            Resource:
              - Fn::Join:
                  - ""
                  - - "arn:"
                    - Ref: AWS::Partition
                    - ":s3:::"
                    - Fn::Sub: cdk-hnb659fds-assets-${AWS::AccountId}-us-west-2
              - Fn::Join:
                  - ""
                  - - "arn:"
                    - Ref: AWS::Partition
                    - ":s3:::"
                    - Fn::Sub: cdk-hnb659fds-assets-${AWS::AccountId}-us-west-2
                    - /*
          - Action:
              - ssmmessages:*
              - ssm:UpdateInstanceInformation
              - ec2messages:*
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: SpecificRoutingS3RoleDefaultPolicy55CDB476
      Roles:
        - Ref: SpecificRoutingS3RoleC7C024BF
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingS3Role/DefaultPolicy/Resource
  SpecificRoutingApplicationInstanceInstanceProfileBBAACD61:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: SpecificRoutingS3RoleC7C024BF
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingApplicationInstance/InstanceProfile
  SpecificRoutingApplicationInstance596E685D:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      IamInstanceProfile:
        Ref: SpecificRoutingApplicationInstanceInstanceProfileBBAACD61
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t3.nano
      SecurityGroupIds:
        - Fn::GetAtt:
            - ApplicationSecurityGroup3903A0DC
            - GroupId
      SubnetId:
        Ref: SpecificRoutingVPCapplicationSubnet1SubnetFB3733AC
      Tags:
        - Key: Name
          Value: application
      UserData:
        Fn::Base64:
          Fn::Join:
            - ""
            - - |-
                #!/bin/bash
                amazon-linux-extras install nginx1 -y
                systemctl enable nginx.service
                systemctl start nginx.service
                aws s3 cp
              - Fn::Sub: s3://cdk-hnb659fds-assets-${AWS::AccountId}-us-west-2/c19b064e171b2ad88d0d23ca75fe73b0b8614f27763f10900006d44af0368541.zip
              - |-2
                 .
                unzip *.zip
                /bin/mv /usr/share/nginx/html/index.html /usr/share/nginx/html/index.html.orig
                /bin/cp -r -n index.html carousel.css /usr/share/nginx/html/
    DependsOn:
      - SpecificRoutingS3RoleDefaultPolicy55CDB476
      - SpecificRoutingS3RoleC7C024BF
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingApplicationInstance/Resource
  SpecificRoutingApplianceInstanceInstanceRole1813B1F7:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
      Tags:
        - Key: Name
          Value: appliance
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingApplianceInstance/InstanceRole/Resource
  SpecificRoutingApplianceInstanceInstanceRoleDefaultPolicyA151C3A3:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ssmmessages:*
              - ssm:UpdateInstanceInformation
              - ec2messages:*
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: SpecificRoutingApplianceInstanceInstanceRoleDefaultPolicyA151C3A3
      Roles:
        - Ref: SpecificRoutingApplianceInstanceInstanceRole1813B1F7
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingApplianceInstance/InstanceRole/DefaultPolicy/Resource
  SpecificRoutingApplianceInstanceInstanceProfile52A42EBE:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: SpecificRoutingApplianceInstanceInstanceRole1813B1F7
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingApplianceInstance/InstanceProfile
  SpecificRoutingApplianceInstanceD6B0F1AB:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      IamInstanceProfile:
        Ref: SpecificRoutingApplianceInstanceInstanceProfile52A42EBE
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t3.nano
      SecurityGroupIds:
        - Fn::GetAtt:
            - ApplicationSecurityGroup3903A0DC
            - GroupId
      SourceDestCheck: false
      SubnetId:
        Ref: SpecificRoutingVPCapplianceSubnet1Subnet911D1F31
      Tags:
        - Key: Name
          Value: appliance
      UserData:
        Fn::Base64: |-
          #!/bin/bash
          sysctl -w net.ipv4.ip_forward=1
          sysctl -w net.ipv6.conf.all.forwarding=1
    DependsOn:
      - SpecificRoutingApplianceInstanceInstanceRoleDefaultPolicyA151C3A3
      - SpecificRoutingApplianceInstanceInstanceRole1813B1F7
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/SpecificRoutingApplianceInstance/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAAE11Q0W7CMAz8Ft7TDNge9srQxJCmLSoTr8gNhhnaBMUODFX8+9IAq7Snu5wu9p3HeqiHRbD6aQAnLux6X9RU6XYhYPcqSasW7Vi3y4NV041bmqkysarJLmLlUDqtZ6WPgl9Q1djrvTZh9pZAyLs/c0de56aDD5AZCJ7grEygY6L94LkTDInfDdckt9dEUtbvBp2oF+Bu/JtneScXf9TcsYCzqBZoYyA5z4KPh5zuv3C3XhRBo9vSX1tkND41zmt7dveb4DdUp2/8uAJmFNaTDi6qRPYx2DzmM8oh5i4GAjSY+qhsS4fektvmVTf/RTm/Rr3jh+PoWY/GejTYMVERohNqUJdX/AXqUgo5uwEAAA==
    Metadata:
      aws:cdk:path: SpecificRoutingDemoStack/CDKMetadata/Default
Outputs:
  BastionHostBastionHostIdC743CBD6:
    Description: Instance ID of the bastion host. Use this to connect via SSM Session Manager
    Value:
      Ref: BastionHost30F9ED05
  VPCID:
    Value:
      Ref: SpecificRoutingVPCBEC300DB
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store.
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 4 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
